initial web terminal implementation

--- a/web-terminal-ts/helm-chart/web-terminal/templates/deployment.yaml
+++ b/web-terminal-ts/helm-chart/web-terminal/templates/deployment.yaml
@@ -1,3 +1,4 @@
+# deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -50,17 +51,6 @@ spec:
           env:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-          {{- if .Values.persistence.enabled }}
-          volumeMounts:
-            - name: terminal-storage
-              mountPath: {{ .Values.persistence.mountPath }}
-          {{- end }}
-      {{- if .Values.persistence.enabled }}
-      volumes:
-        - name: terminal-storage
-          persistentVolumeClaim:
-            claimName: {{ include "web-terminal.fullname" . }}
-      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
