--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:server": "tsc -p tsconfig.server.json",
     "dev": "npm run build && npm start",
     "dev:watch": "concurrently \"webpack --mode=development --watch\" \"tsc -p tsconfig.server.json --watch\" \"nodemon dist/server.js\"",
-    "start": "node dist/server.js",
+    "start": "node dist/server/server.js",
     "clean": "rimraf dist"
   },
   "keywords": [
@@ -22,17 +22,19 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.14.2",
+    "express": "^4.21.2",
+    "ws": "^8.18.2",
     "node-pty": "^1.0.0",
     "@xterm/xterm": "^5.5.0",
     "@xterm/addon-fit": "^0.10.0",
-    "@xterm/addon-web-links": "^0.11.0"
+    "@xterm/addon-web-links": "^0.11.0",
+    "@modelcontextprotocol/sdk": "1.13.2",
+    "zod": ">3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/ws": "^8.5.10",
-    "@types/node": "^20.10.5",
+    "@types/express": ">4.17.21",
+    "@types/ws": ">8.5.10",
+    "@types/node": ">20.10.5",
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
