--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src/server",
+    "rootDir": "./src",      // <--- Change this from "./src/server" to "./src"
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
@@ -17,10 +17,11 @@
     "sourceMap": true
   },
   "include": [
-    "src/server/**/*"
+    "src/server/**/*",     // <--- Keep server files
+    "src/mcp-server/**/*"  // <--- Explicitly include mcp-server files
   ],
   "exclude": [
-    "src/client",
+    "src/client",          // Exclude client files as webpack handles them
     "node_modules",
     "dist"
   ]
